[gd_scene load_steps=7 format=2]

[ext_resource path="res://Baddie/Baddie.gd" type="Script" id=1]
[ext_resource path="res://Props/tileset.png" type="Texture" id=2]
[ext_resource path="res://Baddie/Area2D.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Baddie/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 2 )

[node name="Baddie" type="Node2D"]
script = ExtResource( 1 )
hp = 25
drop = 25
speed = 120.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 2
frame = 1
region_enabled = true
region_rect = Rect2( 96, 0, 32, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="LeftTileCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftTileCheck"]
position = Vector2( -32, 24 )
shape = SubResource( 3 )

[node name="LeftTileCheck2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftTileCheck2"]
position = Vector2( -32, 16 )
shape = SubResource( 3 )

[node name="RightTileCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTileCheck"]
position = Vector2( 32, 24 )
shape = SubResource( 3 )

[node name="RightTileCheck2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTileCheck2"]
position = Vector2( 32, 16 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="LeftTileCheck" to="." method="_on_LeftTileCheck_body_exited"]
[connection signal="body_entered" from="LeftTileCheck2" to="." method="_on_LeftTileCheck2_body_entered"]
[connection signal="body_exited" from="RightTileCheck" to="." method="_on_RightTileCheck_body_exited"]
[connection signal="body_entered" from="RightTileCheck2" to="." method="_on_RightTileCheck2_body_entered"]
